Sep 11 2005  devel  Turned on hostap (straight 'mode foo' control, no priv
                     monitor)
                    Started new filter core class
Sep 10 2005  devel  Turned on ipw2100 source again
                    Turned on acx100 source (kluge to hopefully work with
                     modern acx100 drivers)
                    Turned on atmel-usb sourceA
                    Turned on rt2400, rt2500, rt8180
Sep 09 2005  devel  Started implementing 'auto' device support
                    Skeleton of 'auto' capsource in place (for the one capsource
                     newcore supports currently)
                    Added Madwifi capsource back
Sep 08 2005  devel  Added BCASTDISCON and AIRJACKSSID alerts
Sep 07 2005  devel  Fixed client/server protocol caching
                    Added probereq SSID tracking
                    Added tracked network type updating
                    Changed timestamp/timetracker set/tick to head of loop
                    Added 'retry' flag to ieee80211 packet info
                    Added fragments/retries tracking
                    Added fragments and retries to CLIENT and NETWORK protocols
                    Fixed CLIENT protocol enable
                    Added CLIENT to nettracker tick
Sep 06 2005  devel  Added some support for flooding clients with more than the
                     ringbuf can handle
Sep 05 2005  devel  Fixed DHCP handling
                    Fixed UDP handling
                    Fixed packetchain ordering
                    Added IP tracking
                    Fixed network/client packet attachments
Sep 04 2005  devel  Started adding data processing, IP guessing
                    Added DHCPCONFLICT alert to catch multiple DHCP servers
                     on one network.  Maybe a little too layer-3ish
                    Added CDP ids to NETWORK protocol
                    Added client creation and association
Sep 03 2005  devel  Fixed CDP processing