@@ -1,6 +1,9 @@
 Sep 11 2005  devel  Turned on hostap (straight 'mode foo' control, no priv
                      monitor)
                     Started new filter core class
+                    Added filtering to netracker for filter_tracker
+                    Removed 'FILTER' packetchain stage since it's not going to
+                     be used that way
 Sep 10 2005  devel  Turned on ipw2100 source again
                     Turned on acx100 source (kluge to hopefully work with
                      modern acx100 drivers)
